compiler-plugin/src/testData/errors/AnnotationExportNonAnnotation.kt
package errors

<!SYMBOL_EXPORT_EXPORTED_ANNOTATION_NOT_AN_ANNOTATION_CLASS!><!WRONG_ANNOTATION_TARGET!>@ExportAnnotation<!>
class TestAnnotation<!>

